--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.11",
     "element-ui": "^2.4.1",
+    "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.13.5",
     "pug": "^2.0.3",
